--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "graphql": "^16.9.0",
     "lodash": "^4.17.21",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.7.0",
+    "cors": "^2.8.5"
   }
 }
